<resources>
    <string name="app_name">AquaAdventure</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="navLogin">Already have an account? login.</string>
    <string name="navRegister">Don\'t have an account? signup</string>
    <string name="logout">logout</string>
    <string name="user_detail">User Detail</string>
    <string name="full_name">Full Name</string>
    <string name="role">Role</string>
    <string name="phone">Phone Number</string>
    <string name="full_address">Full Address</string>
    <string name="save">save</string>
    <string name="explorer">Explorer</string>
    <string name="guide">Guide</string>
    <string name="confirm_password">confirm password</string>
    <string name="unique_id">Unique Id</string>
    <string name="admin">Admin</string>
    <string name="firebase_cloud_storage">Firebase Cloud Storage</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload</string>
    <string name="selected_image">Selected Image</string>
    <string name="enter_activity_name">Enter activity name</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="enter_description">Description</string>
    <string name="enter_location">Location</string>
    <string name="enter_price">Price</string>
    <string name="enter_date">Date</string>
    <string name="enter_start_time">Start time</string>
    <string name="enter_end_time">End Time</string>
    <string name="enter_duration">Duration</string>
    <string name="create_activity">Create Activity</string>
    <string name="profile">Profile</string>
    <string name="logo">Logo</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="account">Account</string>
    <string name="location_allocated">Location Allocated</string>
    <string name="specialization">Specialization</string>
    <string name="register_instructor">Register Instructor</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- res/values/strings.xml -->
    <string-array name="login_types">
        <item>User Login</item>
        <item>Instructor Login</item>
    </string-array>

</resources>