<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:id="@+id/uname"
        android:importantForAutofill="no"
        android:padding="14sp"
        android:layout_margin="10sp"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:id="@+id/phone"
        android:padding="14sp"
        android:layout_margin="10sp"
        android:importantForAutofill="no"
        android:inputType="phone"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_address"
        android:id="@+id/uaddress"
        android:padding="14sp"
        android:layout_margin="10sp"
        android:importantForAutofill="no"
        android:inputType="text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/uemail"
        android:importantForAutofill="no"
        android:enabled="false"
        android:padding="14sp"
        android:layout_margin="10sp"
        android:inputType="textEmailAddress" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:importantForAutofill="no"
        android:enabled="false"
        android:padding="14sp"
        android:layout_margin="10sp"
        android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:paddingStart="50sp"
        android:paddingEnd="50sp"
        android:backgroundTint="@color/blue"/>



</LinearLayout>