<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AddInstructor"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/register_instructor"
            android:textAlignment="center"
            android:textSize="24sp"
            android:padding="20dp"
            android:defaultFocusHighlightEnabled="true"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullname"
                android:layout_width="320dp"
                android:inputType="text"
                android:hint="@string/full_name"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="320dp"
                android:inputType="number"
                android:hint="@string/phone"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="320dp"
                android:hint="@string/email"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="320dp"
                android:inputType="text"
                android:hint="@string/full_address"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="320dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cpassword"
                android:layout_width="320dp"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_allocated"
                android:layout_width="320dp"
                android:inputType="text"
                android:hint="@string/location_allocated"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specialization"
                android:layout_width="320dp"
                android:inputType="text"
                android:hint="@string/specialization"
                android:layout_height="50dp"
                android:defaultFocusHighlightEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pgbar"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/register"
            android:paddingEnd="100dp"
            android:paddingStart="100dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:id="@+id/register"
            android:layout_margin="10dp"
            android:defaultFocusHighlightEnabled="true"/>

    </LinearLayout>
</ScrollView>
