<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Admin.InsertActivity.InsertImage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_activity"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/titleEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Title EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/titleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_activity_name"
                android:inputType="text"
                android:layout_marginTop="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                app:layout_constraintWidth_percent="0.8"/>

            <!-- Description EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_description"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/titleEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintWidth_percent="0.8"/>

            <!-- Location EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/locationEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/baseline_map_24"
                android:hint="@string/enter_location"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
                app:layout_constraintWidth_percent="0.8" />

            <!-- Price EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/priceEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_price"

                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/locationEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintWidth_percent="0.8"/>

            <!-- Date EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/dateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/date"
                android:hint="@string/enter_date"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceEditText"
                app:layout_constraintWidth_percent="0.8" />

            <!-- Start Time EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/startTimeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/baseline_access_time_24"
                android:hint="@string/enter_start_time"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateEditText"
                app:layout_constraintWidth_percent="0.8" />

            <!-- End Time EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/endTimeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/baseline_access_time_24"
                android:hint="@string/enter_end_time"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startTimeEditText"
                app:layout_constraintWidth_percent="0.8" />

            <!-- Duration EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/durationEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_duration"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/endTimeEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintWidth_percent="0.8"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/uploadButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

            <!-- ImageView -->

            <!-- Choose Image Button -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="330dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/selected_image"
                android:background="@drawable/baseline_image_24"
                android:padding="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/durationEditText" />

            <Button
                android:id="@+id/chooseImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/baseline_image_24"
                android:text="@string/choose_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <!-- Upload Button -->
            <Button
                android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/baseline_cloud_upload_24"
                android:text="@string/upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <!-- Progress Bar -->

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
