<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminLogin"
    android:orientation="vertical"
    android:background="@drawable/dark_blue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textColor="#B5B5B5"
        android:textAlignment="center"
        android:layout_marginTop="200dp"
        android:textSize="32sp"
        android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColorHint="#B5B5B5"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="330dp"
            android:drawableEnd="@drawable/baseline_password_24"
            android:inputType="textPassword"
            android:hint="@string/unique_id"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="10dp"
        android:id="@+id/adminlogin"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

</LinearLayout>