<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="194dp"
        android:layout_height="189dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:contentDescription="profile"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_circle_24"
        app:circleCrop="true" /> <!-- Make circular with `circleCrop` or use shape drawable -->


    <!-- Email TextView -->
    <TextView
        android:id="@+id/email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname"
            android:layout_width="320dp"
            android:inputType="text"
            app:textInputLayoutFocusedRectEnabled="true"
            android:hint="@string/full_name"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="320dp"
            android:inputType="number"
            app:textInputLayoutFocusedRectEnabled="true"
            android:hint="@string/phone"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="320dp"
            android:inputType="text"
            app:textInputLayoutFocusedRectEnabled="true"
            android:hint="@string/full_address"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="update"
        android:layout_marginTop="0dp"
        app:icon="@drawable/baseline_logout_24" />

</LinearLayout>